Fix layout bug on the example page

--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -1,76 +1,26 @@
-html, body {
-  height: 100%;
-}
-
-body {
-  max-width: 100%;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-}
-
-body:not(.toc-inline) {
-  padding: 0;
-}
-
-#base_window_layer {
-  box-sizing: border-box;
-  height: 100%;
-  width: 100%;
-  /* Use overflow scroll and webkit-overflow-scrolling to add momentum scroll*/
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
-  padding: 1.6em 0 2em;
-}
-
-#base_window_layer main, #base_window_layer nav {
-  max-width: 50em;
-  margin: auto;
-  padding-right: 1.5em;
-  padding-left: 50px;
-  padding-left: calc(26px + 1.5em);
-}
-
-@media screen and (min-width: 78em) {
-  body:not(.toc-inline) #base_window_layer main, body:not(.toc-inline) #base_window_layer nav  {
-    padding-left: 29em;
-  }
-
-  body:not(.toc-inline) {
-    padding: 0;
-  }
-}
-
-body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content nav  {
-  padding-left: 1.5em;
-}
-
-
 .hidden {
   display: none
 }
 
 [role="dialog"] {
-  width: 50%;
-  margin: 10vh auto;
+  box-sizing: border-box;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 0;
   padding: 5px;
   border: thin #000 solid;
   background-color: #fff;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (min-width: 640px) {
   [role="dialog"] {
-    box-sizing: border-box;
-    top: 0px;
-    left: 0px;
-    margin: 0 auto;
-    min-height: 100%;
-    width: 100%;
+    width: 50%;
+    margin: 10vh auto;
   }
 }
 
 [role="dialog"] h2:first-of-type {
-  text-align:center;
+  text-align: center;
 }
 
 .dialog_form {
@@ -131,15 +81,15 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 }
 
 .dialog_close_button {
-  float:right;
-  position:absolute;
-  top:10px;
-  left:92%;
-  height:25px;
+  float: right;
+  position: absolute;
+  top: 10px;
+  left: 92%;
+  height: 25px;
 }
 
 .dialog_close_button img {
-  border:0;
+  border: 0;
 }
 
 .dialog_desc {
@@ -151,9 +101,9 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 .dialog-backdrop.active {
   position: fixed;
   overflow-y: scroll;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background: rgba(0, 0, 0, 0.3);
 }
